@@ -7,7 +7,7 @@
     <Node Class="PLScene::SNCoordinateAxisRotation" />
     <Node Class="PLScene::SNHelper" Name="TeapotTargetHelper" />
     <Node Class="PLScene::SNCamera" Name="OrbiterCamera" Position="-11.0 12.0 -1.0">
-        <Modifier Class="PLScene::SNMMouseOrbitingController" Target="TeapotTargetHelper" />
+        <Modifier Class="PLScene::SNMOrbitingController" Target="TeapotTargetHelper" />
         <Modifier Class="PLScene::SNMRotationFixRoll" />
     </Node>
 </Scene>
