@@ -1245,11 +1245,11 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\Scene\SceneNodeModifiers\SNMMouseOrbitingController.cpp"
+					RelativePath=".\src\Scene\SceneNodeModifiers\SNMOrbitingController.cpp"
 					>
 				</File>
 				<File
-					RelativePath=".\include\PLScene\Scene\SceneNodeModifiers\SNMMouseOrbitingController.h"
+					RelativePath=".\include\PLScene\Scene\SceneNodeModifiers\SNMOrbitingController.h"
 					>
 				</File>
 				<File
