@@ -1,5 +1,5 @@
 /*********************************************************\
- *  File: SNMMouseOrbitingController.h                   *
+ *  File: SNMOrbitingController.h                        *
  *
  *  Copyright (C) 2002-2010 The PixelLight Team (http://www.pixellight.org/)
  *
@@ -43,7 +43,7 @@ namespace PLScene {
 //[-------------------------------------------------------]
 /**
 *  @brief
-*    Scene node modifier class rotating a scene node towards a target scene node using the mouse
+*    Scene node modifier class rotating a scene node towards a target scene node using an input controller
 *
 *  @remarks
 *    Hold the 'shift'-key to speed up, hold the 'strg'-key to slow down.
@@ -52,7 +52,7 @@ namespace PLScene {
 *    - Normally only used for debugging
 *    - 'SpaceMouse'-support
 */
-class SNMMouseOrbitingController : public SNMOrbiting {
+class SNMOrbitingController : public SNMOrbiting {
 
 
 	//[-------------------------------------------------------]
@@ -105,7 +105,7 @@ class SNMMouseOrbitingController : public SNMOrbiting {
 	//[-------------------------------------------------------]
 	//[ RTTI interface                                        ]
 	//[-------------------------------------------------------]
-	pl_class(PLS_RTTI_EXPORT, SNMMouseOrbitingController, "PLScene", PLScene::SNMOrbiting, "Scene node modifier class rotating a scene node towards a target scene node using the mouse")
+	pl_class(PLS_RTTI_EXPORT, SNMOrbitingController, "PLScene", PLScene::SNMOrbiting, "Scene node modifier class rotating a scene node towards a target scene node using an input controller")
 		pl_constructor_1(ParameterConstructor, SceneNode&, "Parameter constructor", "")
 		pl_attribute(XSpeed,		float,					0.3f,																			ReadWrite,	DirectValue,	"Mouse look x axis speed",					"")
 		pl_attribute(YSpeed,		float,					0.3f,																			ReadWrite,	DirectValue,	"Mouse look y axis speed",					"")
@@ -136,13 +136,13 @@ class SNMMouseOrbitingController : public SNMOrbiting {
 		*  @param[in] cSceneNode
 		*    Owner scene node
 		*/
-		PLS_API SNMMouseOrbitingController(SceneNode &cSceneNode);
+		PLS_API SNMOrbitingController(SceneNode &cSceneNode);
 
 		/**
 		*  @brief
 		*    Destructor
 		*/
-		PLS_API virtual ~SNMMouseOrbitingController();
+		PLS_API virtual ~SNMOrbitingController();
 
 
 	//[-------------------------------------------------------]
