@@ -7,6 +7,7 @@ Changes in PixelLight 0.9.2-R3 (not yet released)
 - Change: "PLPhysics::SNMPhysicsCharacterController" is now using a virtual input controller instead of accessing input devices directly
 - Change: "PLScene::SNMMoveController" is now using a virtual input controller instead of accessing input devices directly
 - Change: New "PLScene::SNMLookController" scene node modifier as replacement for "PLScene::SNMMouseLookController"
+- Change: Renamed "PLScene::SNMMouseOrbitingController" scene node modifier into "PLScene::SNMOrbitingController"
 - Removed: Old shader interface within PLRenderer
 - Removed: "PLScene::SNMMouseMoveController", use "PLScene::SNMMoveController" with virtual input controller instead
 - Bugfix: Within some GLSL shaders, the not specified "clamp(float, int, int)" was used, which didn't work on every system
